force-app/main/default/objects/item__c/item__c.object-meta.xml
<CustomObject>
    <label>item</label>
    <nameField>
        <label>item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>