force-app/main/default/objects/item__c/fields/highest_qty__c.field-meta.xml
<CustomField>
    <fullName>highest_qty__c</fullName>
    <label>highest_qty</label>
    <summarizedField>Sale__c.sqty__c</summarizedField>
    <summaryForeignKey>Sale__c.item__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>