force-app/main/default/objects/item__c/fields/total__c.field-meta.xml
<CustomField>
    <fullName>total__c</fullName>
    <formula>qty__c *  rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>